refactor: ListValue.getFirst() replaces ListValue.get(0)