@@ -177,7 +177,7 @@ public class RandomWalk implements Computation<RandomWalkMessage> {
      */
     private Id getSourceId(IdList path) {
         // the first id of path is the source id
-        return path.get(0);
+        return path.getFirst();
     }
 
     /**
